# pylon

./: pyproject.toml
.clinerules/: 01-coding.md  02-docs.md  cline-overview.md
apps/buildings/: admin.py  apps.py  models.py  signals.py  tests.py
apps/buildings/migrations/: 0001_initial.py  0002_initial.py
apps/core/: models.py
apps/core/migrations/: 0001_initial.py
apps/users/: admin.py  choices.py  factories.py  forms.py  managers.py  models.py
apps/users/data/: users.py
apps/users/management/commands/: seed_users.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_id.py
config/: settings.py
templates/emails/: welcome_owner.txt
