[tool.poetry]
name = "pylon"
version = "0.1.0"
description = ""
authors = ["Enrique Lazo Bello <enlabe@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.2.0"
psycopg2-binary = "^2.9.10"
faker = "^37.1.0"
django-guardian = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
